--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,92 @@
+#configureCustomer() {
+    if (this.#accounts.length < 1) {
+      this.#customer = {};
+      return;
+    }
+
+    for (const field of this.#clientCurrent) {
+      for (const account of this.#accounts) {
+        if (field.isCurrentClient && field.code === account.feeType) {
+
+          // -----------------------------
+          // INÍCIO DA REGRA "NOT APPLICABLE"
+          // -----------------------------
+          if (
+            field.code === 2 &&  
+            this.#customer.feeGroups[0].kycMailingStatus !== 'Hold Mail'
+          ) {
+            field.defaultValue = 'NOT APPLICABLE';
+            field.labelValue = field.defaultValue;
+
+            field.exceptionOptions = [
+              {
+                value: field.defaultValue,
+                text: field.defaultValue
+              }
+            ];
+          }
+          else {
+            field.defaultValue = account.feeAmount?.toString() || '';
+            field.labelValue = numberToCurrency(field.defaultValue);
+          }
+
+        }
+      }
+    }
+
+    for (const feeGroup of this.#customer.feeGroups) {
+      feeGroup.cif = this.#accounts[0]?.cifno || null;
+      feeGroup.accountNumber = this.#accounts[0]?.ddaNumber || null;
+    }
+
+    this.#clearMemory();
+  }
+
+  #clearMemory() {
+    this.#accounts = [];
+    this.#clientCurrent = [];
+  }
+}
+
+
+
+
+>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
+
+
 import { FeeGroup } from './entities/FeeGroups.js';
 import numberToCurrency from '../core/helpers/currency.js';
 
-export default class InvestmentAccountFee {
-  // Altere para "Investment Fees" para que corresponda ao mapeamento na classe principal
-  #feeName = 'Investment Fees';
-  #investiment = {};
+export default class CustomerFees {
+  #feeName = 'Customer Fees';
+  #customer = {};
   #accounts = [];
-  #accountsDDA = [];
-  #allExceptions = new Set();
 
-  constructor(fees, accounts, equityField) {
+  constructor(fees, accounts) {
     if (!fees || !Array.isArray(fees) || fees.length === 0) {
       throw new Error('Fees is empty or undefined');
     }
-    // Seleciona o objeto cujo feeType seja "Investment Fees"
-    this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
-    if (
-      !this.#investiment ||
-      !Array.isArray(this.#investiment.feeGroups) ||
-      !this.#investiment.feeGroups.length
-    ) {
-      this.#investiment = {};
-      return;
+    // Seleciona os dados do fee do tipo Customer Fees
+    this.#customer = fees.filter((x) => x.feeType === this.#feeName)[0];
+    if (!this.#customer || !Array.isArray(this.#customer.feeGroups)) {
+      throw new Error('Customer Fees or feeGroups are undefined');
     }
-
-    // Filtra as contas de investimento (feeType === 3)
-    this.#accounts = accounts.filter((x) => x.feeType === 3);
-    if (this.#accounts.length < 1) {
-      this.#investiment = {};
-      return;
+    if (!accounts || !Array.isArray(accounts) || accounts.length === 0) {
+      throw new Error('Accounts is empty or undefined');
     }
-
-    // Para cada conta, cria itens para os códigos 5, 7, 6 e 9 (para Investment)
-    this.#accounts.forEach((acc) => {
-      if (acc.ddaNumber) {
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 5,
-          entity: acc.entity || null,
-        });
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 7,
-          entity: acc.entity || null,
-        });
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 6,
-          entity: acc.entity || null,
-        });
-        this.#accountsDDA.push({
-          number: acc.ddaNumber,
-          code: 9,
-          entity: acc.entity || null,
-        });
-      }
-    });
-
-    // Deduplica os itens de accountsDDA com base na chave composta "number-code"
-    this.#accountsDDA = Array.from(
-      new Map(this.#accountsDDA.map(item => [`${item.number}-${item.code}`, item])).values()
-    );
-
-    console.log("Debug Investment - accountsDDA:", this.#accountsDDA);
+    // Para Customer Fees, geralmente há apenas uma conta
+    this.#accounts = [accounts[0]];
 
     this.#addMultiplesAccount(this.#accounts[0].cifno);
-    this.#addCurrentClientValue(equityField);
+    this.#addCurrentClientValue();
   }
 
-  get fee() {
-    if (!this.#investiment || !this.#investiment.feeGroups) {
-      return null;
-    }
-    return this.#investiment;
-  }
-
-  // Deduplica os fields com base no fee code
+  /**
+   * Função auxiliar para deduplicar os campos (fields) com base no fee code.
+   *
+   * @param {Array} fields - Array de fields a serem deduplicados.
+   * @returns {Array} - Array de fields sem duplicação.
+   */
   #deduplicateFields(fields) {
     const map = new Map();
     for (const field of fields) {
@@ -87,139 +98,61 @@ export default class InvestmentAccountFee {
   }
 
   /**
-   * Para cada feeGroup de investimento e para cada conta única (accountsDDA),
-   * clona o feeGroup atribuindo o número da conta (accountNumber) e o entityCode.
-   * Garante que para cada conta e para cada grupo (por nome) seja criado apenas um FeeGroup,
-   * mesclando e deduplicando os campos conforme necessário.
+   * Gera os feeGroups para a conta, clonando os grupos originais
+   * e atribuindo o número da conta (accountNumber) e o kycMailingStatus.
+   * Como para Customer Fees normalmente há apenas uma conta, não há replicação.
+   *
+   * @param {string} cif - O CIF do cliente.
    */
   #addMultiplesAccount(cif) {
-    const result = {};
+    const feeGroupTemplates = this.#customer.feeGroups;
+    const newFeeGroups = [];
 
-    for (const feeGroup of this.#investiment.feeGroups) {
-      // Garante que fields esteja definido e clona os fields para evitar referências compartilhadas
-      const clonedFields = (feeGroup.fields || []).map((field) => ({
+    for (const template of feeGroupTemplates) {
+      // Clona os fields para evitar referências compartilhadas
+      let clonedFields = template.fields.map((field) => ({
         ...field,
         exceptionOptions: field.exceptionOptions
           ? field.exceptionOptions.map((opt) => ({ ...opt }))
           : []
       }));
 
-      for (const account of this.#accountsDDA) {
-        if (!result[account.number]) {
-          result[account.number] = {};
-        }
-        // Filtra os fields do grupo que correspondem ao código (5, 7, 6 ou 9)
-        let fieldsForAccount = clonedFields.filter((x) => x.code === account.code);
-        // Se não houver fields para este código, insere um fallback para evitar erro no front
-        if (fieldsForAccount.length === 0) {
-          fieldsForAccount.push({
-            code: account.code,
-            name: '',
-            defaultValue: '',
-            tooltip: '',
-            isException: true,
-            exceptionOptions: []
-          });
-        }
-        if (!result[account.number][feeGroup.name]) {
-          // Cria um novo FeeGroup para essa conta e grupo, deduplicando os campos
-          const dedupedFields = this.#deduplicateFields(fieldsForAccount);
-          const newFeeGroup = new FeeGroup({
-            name: feeGroup.name,
-            fields: dedupedFields,
-            cif,
-            accountNumber: account.number,
-            visible: feeGroup.visible,
-            code: feeGroup.code,
-            entityCode: account.entity,
-          });
-          result[account.number][feeGroup.name] = newFeeGroup;
-        } else {
-          // Se já existir, mescla os campos e deduplica
-          const existingFeeGroup = result[account.number][feeGroup.name];
-          existingFeeGroup.fields = this.#deduplicateFields([
-            ...existingFeeGroup.fields,
-            ...fieldsForAccount,
-          ]);
-        }
-      }
+      // Deduplica os fields com base no fee code
+      clonedFields = this.#deduplicateFields(clonedFields);
+
+      // Define o kycMailingStatus: utiliza o valor da conta, se existir, ou "Standard" como padrão.
+      const kycMailingStatus =
+        this.#accounts[0].kycMailingStatus || 'Print';
+
+      const newFeeGroup = new FeeGroup({
+        name: template.name,
+        fields: clonedFields,
+        cif,
+        accountNumber: this.#accounts[0].ddaNumber.toString(),
+        visible: template.visible,
+        code: template.code,
+        kycMailingStatus // Adicionado para garantir que não venha null
+      });
+      newFeeGroups.push(newFeeGroup);
     }
 
-    console.log("Debug Investment - Agrupando feeGroups, result:", result);
-    // Converte o objeto result em um array de FeeGroups
-    const feeGroupsArray = [];
-    for (const accountNumber in result) {
-      for (const groupName in result[accountNumber]) {
-        feeGroupsArray.push(result[accountNumber][groupName]);
-      }
-    }
-    console.log("Debug Investment - feeGroupsArray:", feeGroupsArray);
-    this.#investiment.feeGroups = feeGroupsArray;
+    this.#customer.feeGroups = newFeeGroups;
   }
 
   /**
-   * Atualiza os valores dos fields para cada FeeGroup de investimento.
-   * Para o field com código 5 (que traz um valor textual completo, oriundo da coluna Frequency/Default Frequency),
-   * define labelValue igual ao defaultValue (mantendo o dado extenso exatamente como vem do banco);
-   * para os demais, tenta converter defaultValue para número e formata como moeda.
-   * **Além disso, para os grupos "Client Current Fees" e para campos com código 7 ou 9 que venham vazios,
-   * força o valor a ser o mesmo do tooltip (ex: "$0.05 per share, min charge of $150 per trade").**
-   * Logs foram adicionados para facilitar a depuração.
+   * Atualiza os valores dos fees para cada grupo, definindo o labelValue com base no valor.
+   * Para Customer Fees, se o campo defaultValue já estiver definido (vindo do banco),
+   * ele não é sobrescrito.
    */
-  #addCurrentClientValue(equityField) {
-    console.log("Debug Investment - Iniciando #addCurrentClientValue");
-    for (const feeGroup of this.#investiment.feeGroups) {
-      feeGroup.cif = this.#accounts[0]?.cifno || null;
-      console.log("Debug Investment - Processando feeGroup para accountNumber:", feeGroup.accountNumber, "group name:", feeGroup.name);
+  #addCurrentClientValue() {
+    for (const feeGroup of this.#customer.feeGroups) {
       for (const field of feeGroup.fields) {
-        console.log("Debug Investment - Processando field:", {
-          code: field.code,
-          name: field.name,
-          defaultValue: field.defaultValue,
-          tooltip: field.tooltip,
-          isException: field.isException
-        });
-        if (field.isException) {
-          field.labelValue = field.labelValue || '';
-        } else {
-          // Para o grupo "Client Current Fees", se os campos com código 7 ou 9 vierem vazios, forçamos o valor
-          if (
-            feeGroup.name === "Client Current Fees" &&
-            (field.code === 7 || field.code === 9) &&
-            (!field.defaultValue || field.defaultValue.trim() === "")
-          ) {
-            field.defaultValue = field.tooltip || "$0.05 per share, min charge of $150 per trade";
-            field.labelValue = field.defaultValue;
-            console.log("Debug Investment - Forçando Client Current Fees para campo código", field.code, "com defaultValue:", field.defaultValue);
-          } else {
-            // Procura a conta correspondente (baseada no número e no código)
-            const corresponding = this.#accountsDDA.find(
-              (acc) =>
-                acc.number.toString() === feeGroup.accountNumber.toString() &&
-                acc.code === field.code
-            );
-            if (corresponding) {
-              if (field.code === 5) {
-                // Para o código 5, usamos o valor textual exatamente como vem do banco (defaultValue)
-                field.labelValue = field.defaultValue;
-                console.log("Debug Investment - Campo código 5, definindo labelValue igual a defaultValue:", field.defaultValue);
-              } else {
-                const numValue = parseFloat(field.defaultValue);
-                field.labelValue =
-                  !isNaN(numValue) ? "$" + numValue.toFixed(2) : field.defaultValue;
-                console.log("Debug Investment - Campo código", field.code, "formatado para labelValue:", field.labelValue);
-              }
-            }
-          }
-        }
+        field.labelValue = numberToCurrency(field.defaultValue);
       }
     }
-    this.#clearMemory();
   }
 
-  #clearMemory() {
-    this.#accounts = [];
-    this.#accountsDDA = [];
-    this.#allExceptions = new Set();
+  get fee() {
+    return this.#customer;
   }
 }
