--- a/.gitignore
+++ b/.gitignore
@@ -74,7 +74,7 @@ export default class CustomerFees {
         accountNumber: this.#accounts[0].ddaNumber.toString(),
         visible: template.visible,
         code: template.code,
-        kycMailingStatus // Adicionado para garantir que não venha null
+        kycMailingStatus // Garante que o valor não venha null
       });
       newFeeGroups.push(newFeeGroup);
     }
@@ -85,23 +85,24 @@ export default class CustomerFees {
   /**
    * Atualiza os valores dos fees para cada grupo, definindo o labelValue com base no valor.
    * Para Customer Fees, se o campo defaultValue já estiver definido (vindo do banco),
-   * ele não é sobrescrito, exceto para o grupo "Client Current Fees". Nesse grupo,
-   * se o kycMailingStatus for "Standard" (indicando que o cliente não possui atualizações),
-   * os campos devem ser forçados a ter o valor "NOT APPLICABLE".
+   * ele não é sobrescrito, exceto para o grupo "Client Current Fees" e somente para o campo com fee code JH002 (field.code === 2).
+   * Nesse caso, se o kycMailingStatus for "Standard", o valor é forçado para "NOT APPLICABLE".
    */
   #addCurrentClientValue() {
     const kycStatus = this.#accounts[0].kycMailingStatus || 'Standard';
     for (const feeGroup of this.#customer.feeGroups) {
-      if (feeGroup.name === "Client Current Fees" && kycStatus === "Standard") {
-        for (const field of feeGroup.fields) {
+      for (const field of feeGroup.fields) {
+        if (
+          feeGroup.name === "Client Current Fees" &&
+          kycStatus === "Standard" &&
+          field.code === 2
+        ) {
           field.defaultValue = "NOT APPLICABLE";
           field.labelValue = "NOT APPLICABLE";
           console.log(
             `CustomerFees - Forçando campo ${field.code} em Client Current Fees para NOT APPLICABLE por kycMailingStatus "${kycStatus}"`
           );
-        }
-      } else {
-        for (const field of feeGroup.fields) {
+        } else {
           field.labelValue = numberToCurrency(field.defaultValue);
         }
       }
